# b

./: Distributed_Trust_Engineer_GYM_EDITION.md  README.md
trust-systems-platform/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
trust-systems-platform/app/: globals.css  layout.tsx  page.tsx
trust-systems-platform/docs/: BUILD_LOG.md  SKILL_TREE_V1.md  WORKPLAN.md
trust-systems-platform/lib/: actions.ts  auth.ts  content-loader.ts  extract-sections.ts  markdown.ts  progress.ts  schedule-reviews.ts  schemas.ts  skill-tree.ts  starter-code.ts  submissions.ts  uploads.ts  validate-proof.ts
trust-systems-platform/prisma/: dev.db  schema.prisma
trust-systems-platform/progress/: BUILD_LOG.md  DESIGN_DECISIONS.md  HANDOFF.md  TODO.md
trust-systems-platform/scripts/: generate-visuals.sh  replace-visual-models.sh  seed-skills.ts  sync-content.ts  sync-visuals.ts  validate-content.ts  validate-visuals.ts
trust-systems-platform/server/: terminal-server.ts
trust-systems-platform/tests/: frontmatter.test.ts  review-schedule.test.ts
trust-systems-platform/visuals/: README.md  lesson_visual_map.csv  lesson_visual_map.json  part_visuals.csv  part_visuals.json  visuals_catalog.json
week-1/FileLogger/: CMakeLists.txt
week-2/: Week2_Day1_TCP_Sockets_Server_Cpp_Linux.md
week-2/tcp_echo_server/: CMakeLists.txt
week-2/tcp_echo_server/include/: kv_store.hpp
week-2/tcp_echo_server/src/: kv_store.tpp  main.cpp
week-3/: Distributed_Trust_Engineer_24_Week_Roadmap.md  Distributed_Trust_Engineer_24_Week_Roadmap_BACKUP.md
(+260 files in other folders)
